[lesson3] feat: added dashboard cell

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,3 +23,11 @@
 .sideBarColor {
   background-color: rgba(160, 172, 194, 0.452);
 }
+
+.tableHover {
+  background-color: #f4f5f9;
+}
+
+.deleteBtn {
+  cursor: pointer;
+}
