--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,13 +33,11 @@
 }
 
 .upperList {
-  .webix_scroll_cont > div {
-    &:nth-child(-n + 5) {
-      background: rgba(146, 153, 246, 0.561);
-    }
-  }
-
   .upperListBtn {
     float: right;
+  }
+
+  .young {
+    background: rgba(246, 248, 134, 0.555);
   }
 }
